tests/success/cast_to_same_type.bz
function test()
{
	let b = false;
	let _ = bool(b);
	let _ = b as bool;
}
