tests/error/try_default_construct_non_default_constructible.bz
function test()
{
	let _ = (*int32)();
}
